city setter keyboard fix